# torchling

./: README.md  activation.py  activations.py  hidden.py  loss.py  neural_network.py  pyproject.toml  sin_nn.py
examples/: 2.html  graphs.py  sin_nn.py  sine_interpretation.html
neural_network/: activation.py  activations.py  batch_norm.py  hidden.py  hidden_no_bias.py  layer.py  neural_network.py
